added too much to talk about too
