# src/routes/organizationRoutes.js
@@ -13,15 +13,23 @@ const authentication = require("../middlewares/auth/authentication");
 const organizationControllers = require("../controllers/organization.controllers");
 const OrganizationAdmin = require("../models/organizationAdmin");
 const User = require("../models/user");
-const organizationRegistrationValidation = require("../middlewares/validations/organizationValidation");
+const {
+  registerValidation,
+  patchOrganizationValidation,
+} = require("../middlewares/validations/organizationValidation");
 const loginValidation = require("../middlewares/validations/loginValidation");
 const addBranchValidation = require("../middlewares/validations/BranchValidation");
 const validation = require("../middlewares/validations/validationResult");
 const problem = require("../models/problem");
+const uploadOrganizationLogo = require("../middlewares/organizationMulterConfig");
+const { branchesBelongsToOrganization } = require("../utils/organizationUtils");
+
 // POST / - add a new organization
 router.post(
   "/register",
-  organizationRegistrationValidation(),
+  uploadOrganizationLogo.single("logo"),
+  registerValidation(),
+  validation,
   checkOrganizationExists,
   registerOrganizationController
 );
@@ -30,6 +38,15 @@ router.post(
   "/login",
   loginValidation(),
   organizationConrollers.loginOrganizationController
+);
+
+router.patch(
+  "/update",
+  authentication,
+  authorise(userRoles.organizationAdmin, userRoles.organization),
+  patchOrganizationValidation(),
+  validation,
+  organizationControllers.updateOrganizationController
 );
 
 router.post(
@@ -62,34 +79,43 @@ router.post(
   organizationControllers.addBranchController
 );
 
-router.post("/add-admin", async (req, res) => {
-  try {
-    const { userId, organizationId, role } = req.body;
+router.post(
+  "/add-admin",
+  authentication,
+  authorise(userRoles.manage_roles, userRoles.organization),
+  branchesBelongsToOrganization,
+  async (req, res) => {
+    try {
+      console.log(req.body);
+      const { organizationId } = req.body;
+      const { userId, role, branches } = req.body;
 
-    // Find the user by ID
-    const user = await User.findById(userId);
+      // Find the user by ID
+      const user = await User.findById(userId);
 
-    if (!user) {
-      return res.status(404).jsend.fail({ message: "User not found" });
+      if (!user) {
+        return res.status(404).jsend.fail({ message: "User not found" });
+      }
+
+      // Create a new OrganizationAdmin document
+      const admin = new OrganizationAdmin({
+        userId,
+        organizationId,
+        role,
+        branches,
+      });
+
+      await admin.save(); // Save the new OrganizationAdmin document
+
+      // Update the user role
+      user.role = userRoles.admin; // Assuming `role` is a field on the User model
+      await user.save();
+
+      res.status(201).jsend.success({ admin, user });
+    } catch (error) {
+      res.status(500).jsend.error({ message: error.message });
     }
-
-    // Create a new OrganizationAdmin document
-    const admin = new OrganizationAdmin({
-      userId,
-      organizationId,
-      role,
-    });
-
-    await admin.save(); // Save the new OrganizationAdmin document
-
-    // Update the user role
-    user.role = userRoles.admin; // Assuming `role` is a field on the User model
-    await user.save();
-
-    res.status(201).jsend.success({ admin, user });
-  } catch (error) {
-    res.status(500).jsend.error({ message: error.message });
   }
-});
+);
 
 module.exports = router;
